fix for topcrash bug 146466, r=sgehani/rjc, sr=bzbarsky, a=chofmann